samples/_failures_safe/1761126803_e4fd78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_944308de.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_944308de.c:179:21: error: expected declaration or statement at end of input
  179 |                     graph->nodes[neighbor].distance = graph->nodes[current].distance + 1;
      |                     ^~~~~
./samples/SAFE/__tmp_944308de.c:179:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_944308de.c:179:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_944308de.c:179:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_944308de.c:179:21: error: expected declaration or statement at end of input
